--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,58 @@
-spring.application.name=humanresource
+# src/main/resources/application.yml
+
+server:
+  port: 9090
+
+spring:
+  profiles:
+    active: "${SPRING_PROFILES_ACTIVE:default}"
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/humanresource
+    username: postgres
+    password: root
+    driver-class-name: org.postgresql.Driver
+
+  security:
+    user:
+      name: ADMINISTRATOR
+      password: ADMINISTRATOR
+
+  jpa:
+    hibernate:
+      ddl-auto: create   # veya update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ser.deneme.info@gmail.com
+    password: yeruwjuggsuvucjq
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+# JWT ayarları environment variable üzerinden okunacak
+security:
+  jwt:
+    secret: "${JWT_SECRET}"                    # Zorunlu, ENV’den gelir
+
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+
+logging:
+  file:
+    name: humanresource.log
+  logback:
+    rollingpolicy:
+      max-file-size: 10MB
+  level:
+    root: info
