--- a/frontend/humanresource/package.json
+++ b/frontend/humanresource/package.json
@@ -15,17 +15,19 @@
     "bootstrap": "^5.3.6",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.18",
-    "sweetalert2": "^11.22.0"
+    "sweetalert2": "^11.22.0",
+    "sweetalert2-react-content": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
