--- a/frontend/humanresource/package.json
+++ b/frontend/humanresource/package.json
@@ -13,9 +13,12 @@
     "@heroicons/react": "^2.2.0",
     "@types/styled-components": "^5.1.34",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.4.9",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
